[gd_scene load_steps=7 format=2]

[ext_resource path="res://Reticule.gd" type="Script" id=2]
[ext_resource path="res://Assets/Reticule.png" type="Texture2D" id=3]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 0 )

[node name="TpWlColShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource( 1 )

[node name="TpWlColour" type="ColorRect" parent="Walls/TopWall"]
offset_left = -512.0
offset_top = -10.0
offset_right = 512.0
offset_bottom = 10.0
color = Color( 0.627451, 0.627451, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 600 )

[node name="BmWlColShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource( 2 )

[node name="BmWlColour" type="ColorRect" parent="Walls/BottomWall"]
offset_left = -512.0
offset_top = -10.0
offset_right = 512.0
offset_bottom = 10.0
color = Color( 0.627451, 0.627451, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 300 )

[node name="LtWlColShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource( 3 )

[node name="LtWlColour" type="ColorRect" parent="Walls/LeftWall"]
offset_left = -10.0
offset_top = -300.0
offset_right = 10.0
offset_bottom = 300.0
color = Color( 0.627451, 0.627451, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 1024, 300 )

[node name="RtWlColShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource( 3 )

[node name="RtWlColour" type="ColorRect" parent="Walls/RightWall"]
offset_left = -10.0
offset_top = -300.0
offset_right = 10.0
offset_bottom = 300.0
color = Color( 0.627451, 0.627451, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reticule" type="Node2D" parent="."]
position = Vector2( 400, 100 )
script = ExtResource( 2 )

[node name="ReticuleSprite" type="Sprite2D" parent="Reticule"]
texture = ExtResource( 3 )

[node name="TextLayer" type="CanvasLayer" parent="."]
layer = 7

[node name="ScoreLabel" type="Label" parent="TextLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 34.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplosionCounter" type="Label" parent="TextLayer"]
offset_left = 20.0
offset_top = 566.0
offset_right = 60.0
offset_bottom = 580.0
text = "Explosions left: "
__meta__ = {
"_edit_use_anchors_": false
}
